--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "main.py", "use": "@vercel/python" }
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-    { "src": "/webhook", "dest": "main.py" }
+    {
+      "src": "/webhook",
+      "methods": ["POST"],
+      "dest": "main.py"
+    }
   ]
 }
